[project]
name = "lat-long-mcp-server"
version = "0.1.0"
description = "MCP server for geocoding via the OpenWeather Geocoding API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.22",
    "ruff>=0.1.0",
]

[project.scripts]
lat-long-mcp-server = "lat_long_mcp_server:main"

[tool.setuptools.packages.find]
include = ["lat_long_mcp_server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
